--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "compile": "babel src --out-dir lib",
     "prepublish": "npm run compile",
-    "test": "mocha --compilers js:babel-register",
+    "test": "mocha test/**/*.js --compilers js:babel-register",
     "lint": "eslint ."
   },
   "devDependencies": {
@@ -35,5 +35,8 @@
     "chai": "^3.5.0",
     "eslint": "^1.10.3",
     "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "mocked-api": "^0.4.2"
   }
 }
