--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "compile": "babel src --out-dir lib",
     "prepublish": "npm run compile",
-    "test": "mocha test/**/*.js --compilers js:babel-register",
+    "test": "mocha --compilers js:babel-register",
     "lint": "eslint ."
   },
   "devDependencies": {
@@ -34,9 +34,11 @@
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.5.0",
     "eslint": "^1.10.3",
+    "express": "^4.13.4",
     "mocha": "^2.4.5"
   },
   "dependencies": {
-    "mocked-api": "^0.4.2"
+    "mocked-api": "^0.4.2",
+    "node-fetch": "^1.3.3"
   }
 }
