--- a/package.json
+++ b/package.json
@@ -38,7 +38,12 @@
     "mocha": "^2.4.5"
   },
   "dependencies": {
+    "chai": "^3.5.0",
+    "glob": "^6.0.4",
+    "jsdom": "^8.0.2",
+    "mocha": "^2.4.5",
     "mocked-api": "^0.4.2",
-    "node-fetch": "^1.3.3"
+    "node-fetch": "^1.3.3",
+    "terminate": "^1.0.8"
   }
 }
