--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "compile": "babel src --out-dir lib",
     "prepublish": "npm run compile",
-    "test": "mocha --compilers js:babel-register",
+    "test": "NODE_ENV=green-light mocha --compilers js:babel-register",
     "lint": "eslint ."
   },
   "devDependencies": {
@@ -39,8 +39,10 @@
   },
   "dependencies": {
     "chai": "^3.5.0",
+    "command-line-args": "^2.1.4",
     "glob": "^6.0.4",
     "jsdom": "^8.0.2",
+    "lodash": "^4.3.0",
     "mocha": "^2.4.5",
     "mocked-api": "^0.4.2",
     "node-fetch": "^1.3.3",
