--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "chai": "^3.5.0",
     "eslint": "^1.10.3",
     "express": "^4.13.4",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "mock-require": "^1.2.1"
   },
   "dependencies": {
     "chai": "^3.5.0",
