--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-core": "^6.4.5",
     "babel-eslint": "^4.1.8",
     "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.5.1",
     "chai": "^3.5.0",
     "eslint": "^1.10.3",
     "express": "^4.13.4",
