--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "main": "lib/index.js",
   "scripts": {
     "compile": "babel src --out-dir lib",
-    "prepublish": "npm run compile",
+    "prepublish": "rm -rf ./lib && npm run compile",
     "test": "NODE_ENV=green-light mocha --compilers js:babel-register",
     "lint": "eslint ."
   },
