--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "compile": "babel src --out-dir lib",
     "prepublish": "rm -rf ./lib && npm run compile",
-    "test": "NODE_ENV=green-light mocha --compilers js:babel-register",
+    "test": "NODE_ENV=green-light mocha --compilers js:babel-register --timeout=5000",
     "lint": "eslint ."
   },
   "devDependencies": {
