--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "green-light",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "author": "Jasper Haggenburg",
   "description": "An opinionated (but complete) set of tools for functional testing",
   "license": "ISC",
@@ -47,6 +47,7 @@
     "mocha": "^2.4.5",
     "mocked-api": "^0.6.3",
     "node-fetch": "^1.4.1",
+    "promise-poller": "^1.3.0",
     "terminate": "^1.0.8"
   }
 }
